k8s-configs/ping-cloud/base/pingdelegator/base/statefulset.yaml
# This defines the pingaccess engine deployment.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingdelegator
  labels:
    cluster: pingdelegator-server
spec:
  replicas: 2
  serviceName: pingdelegator
  selector:
    matchLabels:
      class: pingdelegator-server
  podManagementPolicy: OrderedReady
  template:
    metadata:
      annotations:
        lastUpdateReason: "NA"
      labels:
        class: pingdelegator-server
    spec:
      serviceAccount: ping-serviceaccount
      # affinity:
      #   podAntiAffinity:
      #     # Add a soft requirement for each PA runtime pod to be deployed to a different AZ
      #     preferredDuringSchedulingIgnoredDuringExecution:
      #       - weight: 1
      #         podAffinityTerm:
      #           labelSelector:
      #             matchExpressions:
      #               - key: role
      #                 operator: In
      #                 values:
      #                   - pingaccess-engine
      #           topologyKey: "failure-domain.beta.kubernetes.io/zone"
      containers:
      - name: pingdelegator
        image: pingidentity/pingdelegator:2010-4.2.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"
        volumeMounts:
        # FIXME: fix home directory when containers run as non-root user
        - name: ssh-dir
          mountPath: /root/.ssh
        - name: topology-descriptor
          mountPath: /opt/staging/topology/descriptor.json
          subPath: descriptor.json
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
      #   readinessProbe:
      #     exec:
      #       command: [ /opt/staging/hooks/99-pa-engine-liveness.sh ]
      #     initialDelaySeconds: 60
      #     periodSeconds: 5
      #     failureThreshold: 3
      #     timeoutSeconds: 5
      #   livenessProbe:
      #     exec:
      #       command: [ /opt/staging/hooks/99-pa-engine-liveness.sh ]
      #     initialDelaySeconds: 60
      #     periodSeconds: 30
      #     failureThreshold: 4
      #     timeoutSeconds: 5
        ports:
        - containerPort: 6443
      #   env:
      #   - name: OPERATIONAL_MODE
      #     value: CLUSTERED_ENGINE
      #   - name: PA_ADMIN_USER_PASSWORD
      #     valueFrom:
      #       secretKeyRef:
      #         name: pingaccess-passwords
      #         key: PA_ADMIN_USER_PASSWORD
      volumes:
      - name: ssh-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: pingdelegator-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: topology-descriptor
        configMap:
          name: topology-descriptor
          optional: true
          defaultMode: 0644
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: pingdelegator-license
        secret:
          secretName: pingdelegator-license
          optional: true
          defaultMode: 0400
      - name: pingdelegator-passwords
        secret:
          secretName: pingdelegator-passwords
          optional: true
          defaultMode: 0400
