k8s-configs/ping-cloud/base/pingdelegator/base/service.yaml
# This service exposes the pingdelegator ports within cluster.

apiVersion: v1
kind: Service
metadata:
  name: pingdelegator
spec:
  ports:
    - port: 6443
      name: pingdelegator-admin
      targetPort: 6443
